--- a/springboot-mybatis-wechar/src/main/resources/templates/plate/index.html
+++ b/springboot-mybatis-wechar/src/main/resources/templates/plate/index.html
@@ -6,13 +6,13 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>欢迎你,系统管理员</title>
 
-<link rel="stylesheet" href="publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
+<link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
 </head>
 <body>
     <h1>欢迎你系统管理员</h1>
 
 
-    <script src="publicFrame/jquery/jquery-3.4.0.min.js"></script>
-    <script src="publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
+    <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 </body>
 </html>
