--- a/springboot-mybatis-wechar/src/main/resources/templates/plate/login.html
+++ b/springboot-mybatis-wechar/src/main/resources/templates/plate/login.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>请登录!</title>
 
-<link rel="stylesheet" href="publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-md-7"></div>
                 <div class="col-md-4">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" name="get" action="/plate/login">
                       <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
@@ -39,7 +39,7 @@
                       </div>
                       <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                          <button type="submit" class="btn btn-default">Sign in</button>
+                          <button type="submit" id="btnSave" class="btn btn-default">Sign in</button>
                         </div>
                       </div>
                     </form>
@@ -51,7 +51,8 @@
 
 
 
-<script src="publicFrame/jquery/jquery-3.4.0.min.js"></script>
-<script src="publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
+<script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<script src="/plate/login.js"></script>
 </body>
 </html>
