--- a/springboot-mybatis-wechar/src/main/resources/templates/plate/index.html
+++ b/springboot-mybatis-wechar/src/main/resources/templates/plate/index.html
@@ -7,9 +7,61 @@
 <title>欢迎你,系统管理员</title>
 
 <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>欢迎你系统管理员</h1>
+    <div class="container-fluid plateIndexContainer">
+        <div class="row plateIndexTitle">
+            <div class="col-md-12">
+                <h4>欢迎你，系统管理员！</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 plateIndexMenu">
+                <ul class="nav nav-pills nav-stacked">
+                    <li role="presentation"><a href="">用户管理</a></li>
+                    <li role="presentation"><a href="">任务管理</a></li>
+                    <li role="presentation"><a href="">能量管理</a></li>
+                    <li role="presentation"><a href="">商品管理</a></li>
+                    <li role="presentation"><a href="">收徒管理</a></li>
+                    <li role="presentation"><a href="">账户升级管理</a></li>
+                </ul>
+            </div>
+            <div class="col-md-10">
+                <table class="table table-bordered table-hover">
+                    <tr>
+                        <td>姓名</td>
+                        <td>性别</td>
+                        <td>年龄</td>
+                        <td>身份证号</td>
+                        <td>状态</td>
+                    </tr>
+                    <tr>
+                        <td>姓名</td>
+                        <td>性别</td>
+                        <td>年龄</td>
+                        <td>身份证号</td>
+                        <td>状态</td>
+                    </tr>
+                    <tr>
+                        <td>姓名</td>
+                        <td>性别</td>
+                        <td>年龄</td>
+                        <td>身份证号</td>
+                        <td>状态</td>
+                    </tr>
+                    <tr>
+                        <td>姓名</td>
+                        <td>性别</td>
+                        <td>年龄</td>
+                        <td>身份证号</td>
+                        <td>状态</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
