--- a/springboot-mybatis-wechar/src/main/resources/templates/plate/login.html
+++ b/springboot-mybatis-wechar/src/main/resources/templates/plate/login.html
@@ -1,55 +1,57 @@
 <!doctype html>
 <html lang="ch">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>请登录!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>请登录!</title>
 
-<link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
-<link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/plateStyle.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="loginBac">
-            <div class="row">
-                <div class="col-md-7"></div>
-                <div class="col-md-4">
-                    <form class="form-horizontal" name="get" action="/plate/login">
-                      <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                        <div class="col-sm-10">
-                          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+<div class="container-fluid">
+    <div class="row mr-top-100">
+        <div class="col-md-4 col-xs-1"></div>
+        <div class="col-md-4 col-xs-10">
+            <div class="panel panel-success">
+                <div class="panel-heading text-center">
+                    <b>密码登陆</b>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal" method="post" action="/plate/login">
+                        <div class="form-group">
+                            <label for="C_LOGINNAME" class="control-label"></label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control input-lg" id="C_LOGINNAME" name="C_LOGINNAME" placeholder="登录名/手机号码">
+                            </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                        <div class="col-sm-10">
-                          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <div class="form-group">
+                            <label for="cPassword" class="control-label"></label>
+                            <div class="col-sm-12">
+                                <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="请输入登陆密码">
+                            </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                          <div class="checkbox">
-                            <label>
-                              <input type="checkbox"> Remember me
-                            </label>
-                          </div>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <button type="submit" class="btn btn-block btn-lg btn-primary">登陆</button>
+                            </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                          <button type="submit" id="btnSave" class="btn btn-default">Sign in</button>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <a href="#">忘记密码</a>
+                                <a href="#">免费注册</a>
+                            </div>
                         </div>
-                      </div>
                     </form>
                 </div>
-                <div class="col-md-1"></div>
             </div>
         </div>
+        <div class="col-md-4 col-xs-1"></div>
+
     </div>
-
-
+</div>
 
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
