--- a/springboot-mybatis-wechar/src/main/resources/static/plateStyle.css
+++ b/springboot-mybatis-wechar/src/main/resources/static/plateStyle.css
@@ -6,6 +6,6 @@ html,body{
 .mr-top-100{
     margin-top: 100px;
 }
-#cPassword::placeholder,#cPassword::placeholder{
+input::placeholder{
     font-size: 14px;
 }
