--- a/springboot-mybatis-wechar/src/main/resources/templates/plate/register.html
+++ b/springboot-mybatis-wechar/src/main/resources/templates/plate/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>请登录!</title>
+    <title>请注册!</title>
 
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
@@ -18,31 +18,37 @@
         <div class="col-md-4 col-xs-10">
             <div class="panel panel-success">
                 <div class="panel-heading text-center">
-                    <b>密码登陆</b>
+                    <b>用户注册</b>
                 </div>
                 <div class="panel-body">
-                    <form class="form-horizontal" method="post" action="/plate/login">
+                    <form class="form-horizontal" method="post" action="/plate/register">
+                        <div class="form-group">
+                            <label for="cEmail" class="control-label"></label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control input-lg" id="cEmail" name="cEmail" placeholder="请输入邮箱">
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label for="cLoginname" class="control-label"></label>
                             <div class="col-sm-12">
-                                <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="登录名/手机号码">
+                                <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="设置会员名">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="cPassword" class="control-label"></label>
                             <div class="col-sm-12">
-                                <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="请输入登陆密码">
+                                <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="设置你的登陆密码">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="cPassword1" class="control-label"></label>
+                            <div class="col-sm-12">
+                                <input type="password" class="form-control input-lg" id="cPassword1" name="cPassword1" placeholder="请再次输入你的密码">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <button type="submit" class="btn btn-block btn-lg btn-primary">登陆</button>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <a href="#">忘记密码</a>
-                                <a href="./register">免费注册</a>
+                                <button type="submit" class="btn btn-block btn-lg btn-primary">注册</button>
                             </div>
                         </div>
                     </form>
