--- a/GreenPlatform/src/main/resources/templates/plate/register.html
+++ b/GreenPlatform/src/main/resources/templates/plate/register.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
-    <link rel="stylesheet" href="/plateStyle.css">
+    <link rel="stylesheet" href="/plate/css/plateStyle.css">
 </head>
 <body>
 <div class="container-fluid">
@@ -63,6 +63,6 @@
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
-<script src="/plate/login.js"></script>
+<script src="/plate/js/login.js"></script>
 </body>
 </html>
