--- a/GreenPlatform/src/main/resources/templates/system/index.html
+++ b/GreenPlatform/src/main/resources/templates/system/index.html
@@ -41,15 +41,15 @@
     <div class="container-fluid contentBox">
         <div class="row">
             <div class="col-sm-10"></div>
-            <div class="col-sm-2 text-right"><a href="" class="btn-link"><button class="btn btn-info">施肥</button></a></div>
+            <div class="col-sm-2 text-right" id="js"><a href="#"><span class="glyphicon glyphicon-tint"></span></a></div>
         </div>
         <div class="row">
             <div class="col-sm-10"></div>
-            <div class="col-sm-2 text-right"><a href="" class="btn-link"><button class="btn btn-default">浇水</button></a></div>
+            <div class="col-sm-2 text-right" id="sf"><a href="#"><span class="glyphicon glyphicon-piggy-bank"></span></a></div>
         </div>
         <div class="row">
             <div class="col-sm-10"></div>
-            <div class="col-sm-2 text-right"><a href="" class="btn-link"><button class="btn btn-default">沐浴阳光</button></a></div>
+            <div class="col-sm-2 text-right" id="yg"><a href="#"><span class="glyphicon glyphicon-asterisk"></span></a></div>
         </div>
     </div>
 
