--- a/GreenPlatform/src/main/resources/static/system/css/systemStyle.css
+++ b/GreenPlatform/src/main/resources/static/system/css/systemStyle.css
@@ -1,12 +1,12 @@
 html,body{
     width:100%;
     height:100%;
-    background: #4cae4c;
+    background: url("../../publicImg/systemBg.jpeg") no-repeat center;
+    background-size:contain;
 }
 .navBox{
     height:30%;
 }
 .row{
-    background: #b92c28;
     margin-top: 20px;
 }
