--- a/GreenPlatform/src/main/resources/templates/plate/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/index.html
@@ -7,7 +7,7 @@
 <title>欢迎你,系统管理员</title>
 
 <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
-<link rel="stylesheet" href="/plate/css/style.css">
+<link rel="stylesheet" href="/plate/css/plateStyle.css">
 </head>
 <body>
     <div class="container-fluid plateIndexContainer">
