--- a/GreenPlatform/src/main/resources/templates/plate/login.html
+++ b/GreenPlatform/src/main/resources/templates/plate/login.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
     <link rel="stylesheet" href="/plate/css/plateStyle.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
                     <b>密码登陆</b>
                 </div>
                 <div class="panel-body">
-                    <form class="form-horizontal" method="post" action="/plate/login">
+                    <form class="form-horizontal" id="loginForm">
                         <div class="form-group">
                             <label for="cLoginname" class="control-label"></label>
                             <div class="col-sm-12">
@@ -36,7 +37,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <button type="submit" class="btn btn-block btn-lg btn-primary">登陆</button>
+                                <button type="submit" class="btn btn-block btn-lg btn-primary" id="btnLogin">登陆</button>
                             </div>
                         </div>
                         <div class="form-group">
@@ -57,6 +58,7 @@
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
+<script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/plate/js/login.js"></script>
 </body>
 </html>
