--- a/GreenPlatform/src/main/resources/templates/plate/register.html
+++ b/GreenPlatform/src/main/resources/templates/plate/register.html
@@ -21,7 +21,7 @@
                     <b>用户注册</b>
                 </div>
                 <div class="panel-body">
-                    <form class="form-horizontal" method="post" action="/plate/register">
+                    <form class="form-horizontal" method="post" action="/plate/register" id="registerForm">
                         <div class="form-group">
                             <label for="cEmail" class="control-label"></label>
                             <div class="col-sm-12">
@@ -48,7 +48,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <button type="submit" class="btn btn-block btn-lg btn-primary">注册</button>
+                                <button type="submit" id="btnRegister" class="btn btn-block btn-lg btn-primary">注册</button>
                             </div>
                         </div>
                     </form>
