login and register

--- a/GreenPlatform/src/main/resources/templates/plate/register.html
+++ b/GreenPlatform/src/main/resources/templates/plate/register.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
     <link rel="stylesheet" href="/plate/css/plateStyle.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
                     <b>用户注册</b>
                 </div>
                 <div class="panel-body">
-                    <form class="form-horizontal" method="post" action="/plate/register" id="registerForm">
+                    <form class="form-horizontal"  id="registerForm">
                         <div class="form-group">
                             <label for="cEmail" class="control-label"></label>
                             <div class="col-sm-12">
@@ -63,6 +64,7 @@
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
-<script src="/plate/js/login.js"></script>
+<script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
+<script src="/plate/js/register.js"></script>
 </body>
 </html>
