login and register

--- a/GreenPlatform/src/main/resources/templates/system/index.html
+++ b/GreenPlatform/src/main/resources/templates/system/index.html
@@ -31,7 +31,7 @@
                         <li><a href="#">收徒</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">登陆</a></li>
+                        <li><a href="./login">登陆</a></li>
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
