--- a/GreenPlatform/src/main/resources/static/system/css/systemStyle.css
+++ b/GreenPlatform/src/main/resources/static/system/css/systemStyle.css
@@ -1,8 +1,7 @@
 html,body{
     width:100%;
     height:100%;
-    background: url("../../publicImg/systemBg.jpeg") no-repeat center;
-    background-size:contain;
+    background: url("../../publicImg/systemBg.jpeg");
 }
 .navBox{
     height:30%;
