--- a/GreenPlatform/src/main/resources/templates/plate/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/index.html
@@ -7,7 +7,7 @@
 <title>欢迎你,系统管理员</title>
 
 <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
-<link rel="stylesheet" href="/plate/css/plateStyle.css">
+<link rel="stylesheet" href="/plate/css/index.css">
 </head>
 <body>
     <div class="container-fluid plateIndexContainer">
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-2 plateIndexMenu">
                 <ul class="nav nav-pills nav-stacked">
-                    <li role="presentation"><a href="">用户管理</a></li>
+                    <li class="active" role="presentation"><a href="">用户管理</a></li>
                     <li role="presentation"><a href="">任务管理</a></li>
                     <li role="presentation"><a href="">能量管理</a></li>
                     <li role="presentation"><a href="">商品管理</a></li>
