--- a/GreenPlatform/src/main/resources/templates/plate/login/login.html
+++ b/GreenPlatform/src/main/resources/templates/plate/login/login.html
@@ -53,6 +53,7 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
+<script src="/publicJs/SendRequest.js"></script>
 <script src="/plate/js/login/login.js"></script>
 </body>
 </html>
