--- a/GreenPlatform/src/main/resources/static/plate/css/yhgl/index.css
+++ b/GreenPlatform/src/main/resources/static/plate/css/yhgl/index.css
@@ -2,6 +2,9 @@ html,body{
     width: 100%;
     height: 100%;
 }
+#insertPlateUserForm .row{
+    margin-bottom: 10px;
+}
 .top_title{
     background: #1b6d85;
     margin-bottom: 5px;
