--- a/GreenPlatform/src/main/resources/templates/plate/stgl/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/stgl/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>收徒管理</title>
+    <title>欢迎你,系统管理员</title>
 
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
+    <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="/publicFrame/dhtmlx-4.5/skins/web/dhtmlx.css">
     <link rel="stylesheet" href="/publicFrame/dhtmlx-4.5/skins/dhtmlxgrid.css">
     <link rel="stylesheet" href="/plate/css/yhgl/index.css">
@@ -35,15 +36,15 @@
                 <div class="col-md-12 searchForm">
                     <form class="form-inline">
                         <div class="form-group">
-                            <label for="cUsername">姓名：</label>
-                            <input type="text" class="form-control" id="cUsername" placeholder="请输入姓名">
+                            <label for="cUsernameSearch">姓名：</label>
+                            <input type="text" class="form-control" id="cUsernameSearch" placeholder="请输入姓名">
                         </div>
                         <div class="form-group">
-                            <label for="cPhone">电话号码：</label>
-                            <input type="text" class="form-control" id="cPhone" placeholder="请输入电话号码">
+                            <label for="cPhoneSearch">电话号码：</label>
+                            <input type="text" class="form-control" id="cPhoneSearch" placeholder="请输入电话号码">
                         </div>
                         <button type="button" class="btn btn-info" id="btnSearch">搜索</button>
-                        <button type="button" class="btn btn-primary" id="btnAdd" data-toggle="modal" data-target="#myModal">新增</button>
+                        <button type="button" class="btn btn-primary" id="btnAdd">新增</button>
                     </form>
                 </div>
             </div>
@@ -60,8 +61,8 @@
         版权所有
     </footer>
 
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <!-- addUserModel -->
+    <div class="modal fade" id="addUserModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -69,15 +70,79 @@
                     <h4 class="modal-title" id="myModalLabel">新增系统用户</h4>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <form id="insertPlateUserForm" class="">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="cUsername" class="sr-only"></label>
+                                <input type="text" class="form-control" id="cUsername" name="cUsername" placeholder="请输入姓名">
+                                <input type="hidden" class="form-control" id="cUserid" name="cUserid">
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="cSex" class="sr-only"></label>
+                                <select class="form-control" id="cSex"></select>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="cRylb" class="sr-only"></label>
+                                <select class="form-control" id="cRylb"></select>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="cLoginname" class="sr-only"></label>
+                                <input type="text" class="form-control" id="cLoginname" name="cLoginname" placeholder="设置登录名">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="cEmail" class="sr-only"></label>
+                                <input type="text" class="form-control" id="cEmail" name="cEmail" placeholder="请输入邮箱">
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="cPhone" class="sr-only"></label>
+                                <input type="text" class="form-control" id="cPhone" name="cPhone" placeholder="请输入电话号码">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="cWxhm" class="sr-only"></label>
+                                <input type="text" class="form-control" id="cWxhm" name="cWxhm" placeholder="请输入微信号码">
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="cZjlx" class="sr-only"></label>
+                                <select class="form-control" id="cZjlx"></select>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="cZjhm" class="sr-only"></label>
+                                <input type="text" class="form-control" id="cZjhm" name="cZjhm" placeholder="请输入证件号码">
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="cJtzz" class="sr-only"></label>
+                                <input type="text" class="form-control" id="cJtzz" name="cJtzz" placeholder="请输入家庭住址">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="cPassword" class="sr-only"></label>
+                                <input type="password" class="form-control" id="cPassword" name="cPassword" placeholder="设置初始登陆密码">
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="cPassword1" class="sr-only"></label>
+                                <input type="cPassword1" class="form-control" id="cPassword1" name="cPassword" placeholder="请再次输入初始密码">
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">保存</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary" id="btnSave">保存</button>
+                    <button type="button" class="btn btn-warning" id="btnReset">重置</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="btnRet">关闭</button>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 
 
@@ -85,8 +150,12 @@
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
+<script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/dhtmlx-4.5/dhtmlx.min.js"></script>
 <script src="/publicJs/StringBuffer.js"></script>
+<script src="/publicJs/publicCommon.js"></script>
+<script src="/publicJs/publicyw.js"></script>
+<script src="/publicJs/SendRequest.js"></script>
 <script src="/plate/js/yhgl/index.js"></script>
 </body>
 </html>
