--- a/GreenPlatform/src/main/resources/templates/system/login/login.html
+++ b/GreenPlatform/src/main/resources/templates/system/login/login.html
@@ -13,52 +13,55 @@
     <link rel="stylesheet" href="/system/css/systemStyle.css">
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row mr-top-100">
-        <div class="col-md-4 col-xs-1"></div>
-        <div class="col-md-4 col-xs-10">
-            <div class="panel panel-success">
-                <div class="panel-heading text-center">
-                    <b>密码登陆</b>
-                </div>
-                <div class="panel-body">
-                    <form class="form-horizontal" id="loginForm">
-                        <div class="form-group">
-                            <label for="cLoginname" class="control-label"></label>
-                            <div class="col-sm-12">
-                                <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="登录名/手机号码">
+<header class="loginHeader">
+    <div class="container-fluid">
+        <div class="row mr-top-100">
+            <div class="col-md-4 col-xs-1"></div>
+            <div class="col-md-4 col-xs-10">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center">
+                        <b>密码登陆</b>
+                    </div>
+                    <div class="panel-body">
+                        <form class="form-horizontal" id="loginForm">
+                            <div class="form-group">
+                                <label for="cLoginname" class="control-label"></label>
+                                <div class="col-sm-12">
+                                    <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="登录名/手机号码">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="cPassword" class="control-label"></label>
-                            <div class="col-sm-12">
-                                <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="请输入登陆密码">
+                            <div class="form-group">
+                                <label for="cPassword" class="control-label"></label>
+                                <div class="col-sm-12">
+                                    <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="请输入登陆密码">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <button type="submit" class="btn btn-block btn-lg btn-primary" id="btnLogin">登陆</button>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <button type="submit" class="btn btn-block btn-lg btn-primary" id="btnLogin">登陆</button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <a href="#">忘记密码</a>
-                                <a href="register">免费注册</a>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <a href="#">忘记密码</a>
+                                    <a href="register">免费注册</a>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4 col-xs-1"></div>
+            <div class="col-md-4 col-xs-1"></div>
 
+        </div>
     </div>
-</div>
+</header>
 
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
+<script src="/publicJs/SendRequest.js"></script>
 <script src="/system/js/login/login.js"></script>
 </body>
 </html>
