--- a/GreenPlatform/src/main/resources/templates/system/register/register.html
+++ b/GreenPlatform/src/main/resources/templates/system/register/register.html
@@ -13,63 +13,65 @@
     <link rel="stylesheet" href="/system/css/systemStyle.css">
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row mr-top-100">
-        <div class="col-md-4 col-xs-1"></div>
-        <div class="col-md-4 col-xs-10">
-            <div class="panel panel-success">
-                <div class="panel-heading text-center">
-                    <b>用户注册</b>
-                </div>
-                <div class="panel-body">
-                    <form class="form-horizontal"  id="registerForm">
-                        <div class="form-group">
-                            <label for="cEmail" class="control-label"></label>
-                            <div class="col-sm-12">
-                                <input type="text" class="form-control input-lg" id="cEmail" name="cEmail" placeholder="请输入邮箱">
+<header class="loginHeader">
+    <div class="container-fluid">
+        <div class="row mr-top-50">
+            <div class="col-md-4 col-xs-1"></div>
+            <div class="col-md-4 col-xs-10">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center">
+                        <b>用户注册</b>
+                    </div>
+                    <div class="panel-body">
+                        <form class="form-horizontal"  id="registerForm">
+                            <div class="form-group">
+                                <label for="cEmail" class="control-label"></label>
+                                <div class="col-sm-12">
+                                    <input type="text" class="form-control input-lg" id="cEmail" name="cEmail" placeholder="请输入邮箱">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="cLoginname" class="control-label"></label>
-                            <div class="col-sm-12">
-                                <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="设置会员名">
+                            <div class="form-group">
+                                <label for="cLoginname" class="control-label"></label>
+                                <div class="col-sm-12">
+                                    <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="设置会员名">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="cPassword" class="control-label"></label>
-                            <div class="col-sm-12">
-                                <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="设置你的登陆密码">
+                            <div class="form-group">
+                                <label for="cPassword" class="control-label"></label>
+                                <div class="col-sm-12">
+                                    <input type="password" class="form-control input-lg" id="cPassword" name="cPassword" placeholder="设置你的登陆密码">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="cPassword1" class="control-label"></label>
-                            <div class="col-sm-12">
-                                <input type="password" class="form-control input-lg" id="cPassword1" name="cPassword1" placeholder="请再次输入你的密码">
+                            <div class="form-group">
+                                <label for="cPassword1" class="control-label"></label>
+                                <div class="col-sm-12">
+                                    <input type="password" class="form-control input-lg" id="cPassword1" name="cPassword1" placeholder="请再次输入你的密码">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <button type="submit" id="btnRegister" class="btn btn-block btn-lg btn-primary">注册</button>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <button type="submit" id="btnRegister" class="btn btn-block btn-lg btn-primary">注册</button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <a href="../login">已有账号?立即登陆</a>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <a href="./login">已有账号?立即登陆</a>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
+            <div class="col-md-4 col-xs-1"></div>
+
         </div>
-        <div class="col-md-4 col-xs-1"></div>
-
     </div>
-</div>
-
+</header>
 <script src="/publicFrame/jquery/jquery-3.4.0.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
+<script src="/publicJs/SendRequest.js"></script>
 <script src="/system/js/register/register.js"></script>
 </body>
 </html>
